fix(ui): scroll message area on overflow

--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -112,6 +112,7 @@ a {
 
 .room-messages {
   list-style-type: none;
+  overflow: scroll;
 
   &__message {
     color: #fff;
